# icfpc2017

./: .hgtags  LICENSE  README.md
hs/: LICENSE  README.md  hs.cabal  multi-run.sh  run-lamduct.sh  stack.yaml
hs/app/: AnyPunter.hs  TestPunter.hs  TestPunterOffline.hs  TestPunterOnline.hs  TestPunterSakai.hs  connector.hs  match-haskell-punters.hs  match-offline-punters.hs  matchpunters.hs  runpunter.hs  server.hs
hs/src/: ClaimedGraph.hs  CommonState.hs  Dijkstra.hs  DistanceTable.hs  GameState.hs  GraphUtils.hs  InternalJSON.hs  NormTypes.hs  OfflinePlay.hs  Online.hs  OnlinePlay.hs  Protocol.hs  Punter.hs  Punters.hs  ScoreTable.hs  Simulator.hs  UnionFind.hs
hs/src/Punter/: Alternate.hs  Any.hs  ClaimAny.hs  ClaimGreedy.hs  Connector.hs  Greedy.hs  Longest.hs  MaxDegree.hs  MixedStrategy.hs  Pass.hs  Random.hs  STF.hs
hs/src/Strategy/: Degree.hs  Neighbor.hs  Score.hs
khibino/: memo
oga/: oga.cabal
oga/src/: Main.hs
playlog/: PlaylogViewer.html  PlaylogViewerTemplate.html  client-9009_viewer.html  client-9020_viewer.html  client-9029_viewer.html  client-9040_viewer.html  client-9050_viewer.html  client-9059_viewer.html  client-9079.log_viewer.html  create_html_viewer.hs  greedy-9076_viewer.html
playlog/PlaylogViewer/: puntfx.js
submit/: README
viewer/: PlaylogViewer.html
viewer/PlaylogViewer/: puntfx.js
zakki/: .gitignore  Makefile  memo.txt
zakki/src/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
