-- -*- coding: utf-8 -*-

name:                hs
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/nobsun/icfpc2017/hs#readme
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
copyright:           © 2017, Nobuo Yamashita
category:            Sample Code
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Protocol
--                     , GameState
                     , NormTypes
                     , ClaimedGraph
                     , CommonState
                     , OnlinePlay
                     , OfflinePlay
                     , Punter
                     , Punter.Pass
                     , Punter.Any
                     , Punter.Greedy
                     , Punter.MaxDegree
                     , Punter.Alternate
                     , Punter.STF
                     , Punter.Longest
                     , Punter.Connector
                     , Punter.MixedStrategy
                     , Punters
                     , Simulator
                     , Strategy.Score
                     , Strategy.Degree
                     , Strategy.Neighbor
                     , Dijkstra
                     , UnionFind
                     , ScoreTable
                     , DistanceTable
--                     , GraphUtils
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , clock
                     , containers
                     , data-default-class
                     , deepseq >=1.4.0.0
                     , transformers
                     , hashable
                     , heaps
                     , network
                     , process
                     , text >= 1.2.2.1
                     , unordered-containers
  default-language:    Haskell2010

executable TestPunterOnline
  hs-source-dirs:      app
  main-is:             TestPunterOnline.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , network
                     , text >= 1.2.2.1
                     , hs
  default-language:    Haskell2010

executable TestPunterOffline
  hs-source-dirs:      app
  main-is:             TestPunterOffline.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , text >= 1.2.2.1
                     , hs
  default-language:    Haskell2010

executable runpunter
  hs-source-dirs:      app
  main-is:             runpunter.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , network
                     , text >= 1.2.2.1
                     , optparse-applicative
                     , hs
  default-language:    Haskell2010

executable match-haskell-punters
  hs-source-dirs:      app
  main-is:             match-haskell-punters.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , optparse-applicative
                     , hs
  default-language:    Haskell2010

executable match-offline-punters
  hs-source-dirs:      app
  main-is:             match-offline-punters.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , optparse-applicative
                     , hs
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             server.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , network
                     , optparse-applicative
                     , hs
  default-language:    Haskell2010

executable punter
  hs-source-dirs:      app
  main-is:             connector.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , text >= 1.2.2.1
                     , hs
  default-language:    Haskell2010

executable AnyPunter
  hs-source-dirs:      app
  main-is:             AnyPunter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fgl >= 5.5.3.1
                     , aeson >= 1.0.2.1
                     , bytestring
                     , data-default-class
                     , text >= 1.2.2.1
                     , hs
  default-language:    Haskell2010

test-suite hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nobsun/icfpc2017/hs
